Bug #10039 MEMORY engine is reported as HEAP
Submitted: 20 Apr 2005 19:29 Modified: 25 Apr 2005 18:26
Reporter: Stefan Hinz
Status: Closed
Category:Server Severity:S3 (Non-critical)
Version:5.0.4-beta-Max-log OS:Linux (SuSE Linux 9.3)
Assigned to: Guilhem Bichot Target Version:

[20 Apr 2005 19:29] Stefan Hinz
Description:
Setting the storage_engine var to MEMORY succeeds, but what's reported isn't MEMORY, but
still HEAP.

How to repeat:
mysql> SELECT VERSION();
+--------------------+
| VERSION()          |
+--------------------+
| 5.0.4-beta-Max-log |
+--------------------+
1 row in set (0.00 sec)

mysql> SELECT @@global.storage_engine, @@local.storage_engine;
+-------------------------+--------------------------+
| @@global.storage_engine | @@session.storage_engine |
+-------------------------+--------------------------+
| MyISAM                  | MyISAM                   |
+-------------------------+--------------------------+
1 row in set (0.00 sec)

mysql> SET GLOBAL storage_engine = MEMORY;
Query OK, 0 rows affected (0.01 sec)

mysql> SET LOCAL storage_engine = MEMORY;
Query OK, 0 rows affected (0.00 sec)

mysql> SELECT @@global.storage_engine, @@local.storage_engine;
+-------------------------+--------------------------+
| @@global.storage_engine | @@session.storage_engine |
+-------------------------+--------------------------+
| HEAP                    | HEAP                     |
+-------------------------+--------------------------+
1 row in set (0.00 sec)

Suggested fix:
Make it report MEMORY.
[23 Apr 2005 0:07] Guilhem Bichot
Fixed in 5.0.5
ChangeSet@1.1879, 2005-04-23 00:05:05+02:00, gbichot@quadita2.mysql.com
[25 Apr 2005 18:26] Paul DuBois
Noted in 5.0.5 changelog.